--- a/intstudio/.classpath
+++ b/intstudio/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/mysql-connector-java-5.0.4-bin.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
